--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </label>
 
     <ul class="menu__box">
-      <li><a class="menu__item" href="hair.html">Home</a></li>
+      <li><a class="menu__item" href="index.html">Home</a></li>
       <li>
         <a href="#about" class="menu__item">About</a>
     </li>
